# cryodaq

./: .gitignore  .graphifyignore  AGENTS.md  CC_PROMPT_IV_2_ORCHESTRATOR.md  CC_PROMPT_IV_3_BATCH.md  CC_PROMPT_OVERNIGHT_SWARM_2026-04-24.md  CC_PROMPT_VAULT_BUILD_2026-04-26.md  CHANGELOG.md  CLAUDE.md  CODEX_ARCHITECTURE_CONTROL_PLANE.md  CONFIG_FILES_AUDIT.md  COST_ESTIMATE_PODRYAD.md  DEEP_AUDIT_CC.md  DEEP_AUDIT_CC_POST_2C.md  DEEP_AUDIT_CODEX_POST_2C.md  DEPENDENCY_CVE_SWEEP.md  DOC_REALITY_MAP.md  DRIVER_FAULT_INJECTION.md  HARDENING_PASS_CODEX.md  LICENSE  MORNING_TRIAGE.md  Makefile  PERSISTENCE_INVARIANT_DEEP_DIVE.md  PROD_FIX_BRIEF.md  PROD_FIX_LOG.md  PROJECT_STATUS.md  README.en.md  README.md  README.ru.md  RELEASE_CHECKLIST.md  REPORTING_ANALYTICS_DEEP_DIVE.md  ROADMAP.md  SAFETY_MANAGER_DEEP_DIVE.md  TEST_SWEEP_STATUS.md  THIRD_PARTY_NOTICES.md  VERIFICATION_PASS_HIGHS.md  create_shortcut.py  environment.yml  install.bat  pyproject.toml  (+16 more)
.claude/skills/: cryodaq-team-lead.md  multi-model-consultation.md
.github/workflows/: docs-gate.yml  main.yml  nightly.yml  windows-onedir-smoke.yml
artifacts/: 2026-04-28-pre-ultrareview-recon.md  2026-04-29-ccr-chutes-recon.md
artifacts/calibration/: README.md  log.jsonl
artifacts/consultations/: 2026-06-22-test-hardening-cycle5.md
artifacts/handoffs/: 2026-04-23-cc-to-architect.md  2026-04-24-cc-to-architect.md  2026-04-24-d1-review-handoff.md  2026-04-27-launcher-sigterm-review.md  2026-04-27-vault-audit-handoff.md  2026-04-27-vault-build-handoff.md  2026-04-28-cof-gui-review.md  2026-04-28-cof-migration-review.md  2026-04-28-pre-ultrareview-audit-handoff.md  2026-04-29-f28-cycle2-handoff.md  2026-04-29-f3-cycle1-handoff.md  2026-04-29-f3-cycle2-handoff.md  2026-04-29-f3-cycle3-handoff.md  2026-04-29-f3-cycle4-handoff.md  2026-04-29-f3-cycle5-handoff.md  2026-04-29-f3-master-summary.md  2026-04-30-f-cluster-alarm.md  2026-04-30-f-cluster-misc.md  2026-04-30-f29-cycle1-smoke.md  2026-04-30-overnight-summary.md  2026-04-30-repo-cleanup-summary.md  2026-04-30-vault-refresh.md  2026-05-01-f13-handoff.md  2026-05-01-f17-handoff.md  2026-05-01-f28-cycle3-handoff.md  2026-05-01-f28-cycle3-smoke.md  2026-05-01-f28-cycle4-smoke.md  2026-05-01-f28-cycle5-smoke.md  2026-05-01-f28-cycle6-smoke.md  2026-05-01-f28-cycle6-summary.md  2026-05-01-overnight-summary.md  2026-05-01-parallel-work-summary.md
artifacts/recon/: 2026-04-28-ultrareview-ready.md  2026-04-29-plugin-discovery.md  README.md
build_scripts/: build.bat  build.sh  cryodaq.spec  post_build.py  windows_onedir_smoke.py
config/: agent.yaml  alarms.yaml  alarms_v3.yaml  analytics_layout.yaml  channel_descriptors.local.yaml.example  channel_descriptors.yaml  channels.yaml  cooldown.yaml  housekeeping.yaml  instruments.local.yaml.example  instruments.yaml  interlocks.yaml  notifications.local.yaml.example  notifications.local.yaml.yaml  notifications.yaml  physical_alarms.yaml  plugins.yaml  rag.yaml.example  rag_categories.yaml  safety.yaml  shifts.yaml  sinks.yaml.example  web.local.yaml.example
cooldown_v5/: Testovij_progon_illuminator18-20-191125.json  predictor_model.json  temp_calibrate_15-22-131025.json  Испытания_ОО_АК_в_КВУ_23122519-13-231225.json  МТО_11-1610-10-240925.json  МТО_11-1618-28-160425.json  МТО_11-1621-59-160725.json  Образцы_Рамиля_+_тест_фольг_2_и_413-01-101125.json  Пьезоэлемент_с_энкодером18-32-030325.json  термоинтерфейсы17-20-230126.json
docs/: CODEX_SELF_REVIEW_PLAYBOOK.md  DESIGN_SYSTEM.md  MONTANA_IMPLEMENTATION_AGENT_SPEC.md  MONTANA_REFACTOR_REPORT.md  NEXT_SESSION.md  ORCHESTRATION.md  PHASE_UI1_V2_WIREFRAME.md  REPO_AUDIT_REPORT.md  SPEC_AUTHORING_TEMPLATE.md  UI_REWORK_ROADMAP.md  alarms_tuning_guide.md  architecture.md  bug_B1_zmq_idle_death_handoff.md  changelog-revision-findings.md  deployment.md  first_deployment.md  instruments.md  lab_verification_checklist.md  operator_manual.md  operator_scenario_baseline.md  protocol.md  quickstart.md  safety-operator.md  troubleshooting.md
governance/: agent_context_schema.yaml  agent_preventions.yaml
logs/: engine.log.2026-04-09  engine.log.2026-04-10  launcher.log.2026-04-09  launcher.log.2026-04-10
plugins/: cooldown_estimator.py  cooldown_estimator.yaml  phase_detector.py  phase_detector.yaml  thermal_calculator.py  thermal_calculator.yaml
scripts/: check_lock_drift.py  disable_usb_suspend.ps1  download_manuals.sh  soak_mock_engine.py  soak_mock_stack.py  soak_mock_stack_runner.py
src/cryodaq/: engine.py  (+13 more)
tests/: _qt_cleanup.py  _widget_cleanup.py  conftest.py  test_changelog.py  test_ci_candidate_evidence.py  test_ci_safe_sqlite_contract.py  test_claudemd_index.py  test_engine_config_error.py  test_engine_cooldown_history.py  test_engine_import_surface.py  test_event_loop_no_deprecation.py  test_f36_operator_scenario_contract.py  test_frozen_entry.py  test_instance_lock.py  test_launcher_backoff.py  test_launcher_bridge_handshake.py  test_launcher_engine_stderr.py  test_launcher_periodic_runtime.py  test_launcher_report_runtime.py  test_launcher_shutdown_ownership.py  test_launcher_signals.py  test_launcher_soak_artifact_capability.py  test_launcher_theme_menu.py  test_lock_drift.py  test_logging_setup.py  test_operator_snapshot.py  test_operator_snapshot_transport.py  test_paths_frozen.py  test_pyinstaller_spec.py  test_rest_api.py  test_web_dashboard.py  test_windows_onedir_smoke_contract.py  test_zmq_bind_recovery.py  test_zmq_safety.py
tools/: _b1_diagnostics.py  _zmq_helpers.py  agent_context_gate.py  candidate_evidence.py  check_python_compile.py  ci_candidate_evidence.py  ci_candidate_runner.py  diag_zmq_b1_capture.py  diag_zmq_bridge.py  diag_zmq_bridge_extended.py  diag_zmq_direct_req.py  diag_zmq_idle_hypothesis.py  diag_zmq_subprocess.py  force_phase.py  generate_dual_review_coverage.py  generate_fable_review_map.py  generate_montana_architecture_svgs.py  governance_contract.py  loc_estimate.py  mock_scenario.py  montana_candidate_gate.py  replay_session.py  standing_lane_authority.py  theme_previewer.py
tsp/: cryodaq_wdog.lua  p_const.lua  p_const_single.lua
(+1342 files in other folders)
