[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cryodaq"
version = "0.34.0"
description = "Система сбора данных для криогенной лаборатории (АКЦ ФИАН, Millimetron)"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Vladimir Fomenko" },
]
dependencies = [
    # Phase 2c M.1: upper bounds added so a future major-version bump
    # cannot silently break the bundle build. Lockfile in
    # requirements-lock.txt pins exact versions for reproducible builds.
    "pyside6>=6.6,<7",
    "pyqtgraph>=0.13,<0.14",
    "pyvisa>=1.14,<2",
    "pyserial-asyncio>=0.6,<1",
    "pyzmq>=25,<27",
    "h5py>=3.10,<4",
    "pyyaml>=6.0,<7",
    "msgpack>=1.0,<2",
    "matplotlib>=3.8,<4",
    "aiohttp>=3.9.5,<4",
    "numpy>=1.26,<3",
    "scipy>=1.12,<2",
    "openpyxl>=3.1,<4",
    "python-docx>=1.1,<2",
    "pyqtdarktheme-fork>=2.3.6,<3",
    # IV.3 Finding 4: ToolRail uses qtawesome to render Phosphor icons
    # at runtime instead of shipping Lucide SVG files. Phosphor has
    # 1200+ icons vs. 10 SVGs previously; theming falls out naturally
    # because qta.icon(color=...) renders fresh on each call.
    "qtawesome>=1.4,<2",
    # IV.4 Finding 1: pyarrow promoted from [archive] extra to base.
    # Backend already exports Parquet best-effort on finalize; optional
    # install meant silent skip with "pyarrow not installed" warning
    # whenever the lab PC missed the extras. UI gains an explicit
    # Parquet export button in the same commit, so the feature must
    # work out of the box. Adds ~60 MB to the install footprint.
    # Upper bound set to <25 so the lockfile's pyarrow 23.x pin
    # resolves cleanly from the declared spec.
    "pyarrow>=15,<25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4",
    "pytest-timeout>=2.0",
    "ruff>=0.3",
    "pyinstaller>=6.0",
    "pip-tools>=7.4",
]
web = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
]
# IV.4 Finding 1: archive extra retained as a no-op alias so any
# deployment / CI script pinned to `pip install -e ".[archive]"` keeps
# working. pyarrow now ships in base deps (see above); this list is
# intentionally empty.
archive = []

[project.scripts]
cryodaq-engine = "cryodaq.engine:main"
cryodaq-gui = "cryodaq.gui.app:main"
cryodaq = "cryodaq.launcher:main"
cryodaq-cooldown = "cryodaq.tools.cooldown_cli:main"
# Frozen entry points — used by PyInstaller spec. Call freeze_support()
# BEFORE importing PySide6 / cryodaq submodules to avoid Windows fork bomb.
cryodaq-frozen = "cryodaq._frozen_main:main_launcher"
cryodaq-frozen-engine = "cryodaq._frozen_main:main_engine"
cryodaq-frozen-gui = "cryodaq._frozen_main:main_gui"

[tool.hatch.build.targets.wheel]
packages = ["src/cryodaq"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ASYNC"]
