[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cryodaq"
version = "0.56.4"
description = "Система сбора данных для криогенной лаборатории (АКЦ ФИАН, Millimetron)"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Vladimir Fomenko" },
]
dependencies = [
    # Phase 2c M.1: upper bounds added so a future major-version bump
    # cannot silently break the bundle build. Lockfile in
    # requirements-lock.txt pins exact versions for reproducible builds.
    "pyside6>=6.6,<7",
    "pyqtgraph>=0.13,<0.14",
    "pyvisa>=1.14,<2",
    "pyserial-asyncio>=0.6,<1",
    "pyzmq>=25,<28",  # 2026-05-15: bumped from <27 — Python 3.14 Windows wheels only on 27.x+
    "h5py>=3.10,<4",
    "pyyaml>=6.0,<7",
    "msgpack>=1.0,<2",
    "matplotlib>=3.8,<4",
    "aiohttp>=3.9.5,<4",
    "numpy>=1.26,<3",
    "scipy>=1.12,<2",
    "openpyxl>=3.1,<4",
    "python-docx>=1.1,<2",
    "pyqtdarktheme-fork>=2.3.6,<3",
    # IV.3 Finding 4: ToolRail uses qtawesome to render Phosphor icons
    # at runtime instead of shipping Lucide SVG files. Phosphor has
    # 1200+ icons vs. 10 SVGs previously; theming falls out naturally
    # because qta.icon(color=...) renders fresh on each call.
    "qtawesome>=1.4,<2",
    # IV.4 Finding 1: pyarrow promoted from [archive] extra to base.
    # Backend already exports Parquet best-effort on finalize; optional
    # install meant silent skip with "pyarrow not installed" warning
    # whenever the lab PC missed the extras. UI gains an explicit
    # Parquet export button in the same commit, so the feature must
    # work out of the box. Adds ~60 MB to the install footprint.
    # Upper bound set to <25 so the lockfile's pyarrow 23.x pin
    # resolves cleanly from the declared spec.
    "pyarrow>=15,<25",
    # F27: composition photo validation and dimension extraction
    "pillow>=10.0,<12",
    # F32: RAG indexer vector store
    "lancedb>=0.6.0,<1",
    # F-KnowledgeBaseExpansion (v0.55.7.1): equipment manual PDF
    # ingestion. Pure-Python text extraction; encrypted / corrupt PDFs
    # are skipped with a warning so a single bad manual cannot kill
    # the bootstrap batch.
    "pypdf>=4.0,<6",
    # IANA time-zone database. Windows ships no system tz database, so resolving
    # tz="UTC" timestamps (parquet archive via pyarrow) raises
    # ZoneInfoNotFoundError without this. No-op where the OS provides tzdata.
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4",
    "pytest-timeout>=2.0",
    "ruff>=0.3",
    "pyinstaller>=6.0",
    "pip-tools>=7.4",
    # Required by starlette/fastapi TestClient used in tests/test_web_dashboard.py.
    # Was present incidentally in a long-lived local venv but never declared, so
    # a fresh install (CI included) failed at collection. See CI green-up.
    "httpx>=0.27",
]
web = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
]
# IV.4 Finding 1: archive extra retained as a no-op alias so any
# deployment / CI script pinned to `pip install -e ".[archive]"` keeps
# working. pyarrow now ships in base deps (see above); this list is
# intentionally empty.
archive = []

[project.scripts]
cryodaq-engine = "cryodaq.engine:main"
cryodaq-gui = "cryodaq.gui.app:main"
cryodaq = "cryodaq.launcher:main"
cryodaq-cooldown = "cryodaq.tools.cooldown_cli:main"
cryodaq-replay-curve = "cryodaq.replay.cli:main"
# F32 RAG indexer Stage 1
cryodaq-rag-index = "cryodaq.agents.rag.cli:index_main"
cryodaq-rag-search = "cryodaq.agents.rag.cli:search_main"
# Frozen entry points — used by PyInstaller spec. Call freeze_support()
# BEFORE importing PySide6 / cryodaq submodules to avoid Windows fork bomb.
cryodaq-frozen = "cryodaq._frozen_main:main_launcher"
cryodaq-frozen-engine = "cryodaq._frozen_main:main_engine"
cryodaq-frozen-gui = "cryodaq._frozen_main:main_gui"

[tool.hatch.build.targets.wheel]
packages = ["src/cryodaq"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Put the repo root on sys.path so `tests` is importable (e.g. the shared
# tests/_widget_cleanup helper) regardless of how pytest is invoked — the
# `pytest` console script (used by CI) does not add CWD the way `python -m
# pytest` does, and tests/gui has no __init__.py.
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "-m 'not ollama'"
markers = [
    "smoke: requires live external services (ollama, instruments); excluded from default CI",
    "ollama: requires a live Ollama HTTP server on localhost:11434. Skipped by default. Run with: pytest -m ollama",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ASYNC"]

[tool.ruff.lint.per-file-ignores]
# E501: LLM prompt-template strings — the long schema/enum lines are part of the
# prompt text sent to the model and must not be wrapped or reflowed.
"src/cryodaq/agents/assistant/query/prompts.py" = ["E501"]
# E501: single escaped-Cyrillic literal per file (\uXXXX form inflates the source
# line past 120). De-escaping to literal Cyrillic would also resolve it; left as a
# scoped ignore for now to avoid touching the literal.
"src/cryodaq/gui/shell/experiment_overlay.py" = ["E501"]
"tests/core/test_sensor_diagnostics.py" = ["E501"]
